crates/fai-tests/tests/fixtures/errors/DuplicateDefinition.fai
module DuplicateDefinition

// `f` is defined twice.
//~ ERROR FAI2004
let f = 1
let f = 2
